--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -74,140 +74,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="493" y="-259"/>
+            <point key="canvasLocation" x="-731" y="-1231"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="953">
-            <objects>
-                <tableViewController id="954" sceneMemberID="viewController" customClass="ContactsViewController" hasRefreshControl="1" storyboardIdentifier="ContactsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="955">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="958">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="958" id="959">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="954" id="956"/>
-                            <outlet property="delegate" destination="954" id="957"/>
-                        </connections>
-                    </tableView>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationItem title="Contacts" id="1251" key="navigationItem">
-                        <rightBarButtonItems>
-                            <barButtonItem title="Done" id="6695">
-                                <connections>
-                                    <action selector="DoneButtonTouched:" destination="954" id="6742"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="Import" id="1258">
-                                <connections>
-                                    <action selector="ImportButton_Activated:" destination="954" id="1282"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="ImportButton" destination="1258" id="name-outlet-1258"/>
-                        <segue id="1909" destination="1771" kind="show" identifier="GoToContactDetails"/>
-                        <outlet property="DoneButton" destination="6695" id="name-outlet-6695"/>
-                    </connections>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="1528">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <attributedString key="attributedTitle">
-                            <fragment content="Refreshing">
-                                <attributes>
-                                    <font key="NSFont" name="HelveticaNeue" family="Helvetica Neue" size="15"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
-                    </refreshControl>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="960" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="457" y="-1163"/>
-        </scene>
-        <scene sceneID="1770">
-            <objects>
-                <viewController id="1771" sceneMemberID="viewController" customClass="ContactDetailsViewController" storyboardIdentifier="ContactDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1768"/>
-                        <viewControllerLayoutGuide type="bottom" id="1769"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1772">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2223" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="87" y="104" width="200" height="30"/>
-                                <state key="normal" title="Request a Story">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <constraints>
-                                    <constraint id="2281" firstItem="2223" firstAttribute="width" constant="200"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="RequestStoryButton_TouchUpInside:" destination="1771" id="2301" eventType="touchUpInside"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2557" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="16" y="198" width="343" height="420"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2558">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="45"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2558" id="2559">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="44.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2617" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="36" y="162" width="53.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                                <constraints>
-                                    <constraint id="2620" firstItem="2617" firstAttribute="height" constant="21"/>
-                                </constraints>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint id="2224" firstItem="2223" firstAttribute="centerX" secondItem="1772" secondAttribute="centerX"/>
-                            <constraint id="2227" firstItem="2223" firstAttribute="top" secondItem="1768" secondAttribute="bottom" constant="40"/>
-                            <constraint id="2614" firstItem="2557" firstAttribute="bottom" secondItem="1772" secondAttribute="bottom"/>
-                            <constraint id="2615" firstItem="2557" firstAttribute="leading" secondItem="1772" secondAttribute="leadingMargin"/>
-                            <constraint id="2616" firstItem="2557" firstAttribute="trailing" secondItem="1772" secondAttribute="trailingMargin"/>
-                            <constraint id="2618" firstItem="2617" firstAttribute="leading" secondItem="1772" secondAttribute="leadingMargin" constant="20"/>
-                            <constraint id="2619" firstItem="2617" firstAttribute="top" secondItem="2223" secondAttribute="bottom" constant="28"/>
-                            <constraint id="2646" firstItem="2557" firstAttribute="top" secondItem="2617" secondAttribute="bottom" constant="15"/>
-                        </constraints>
-                    </view>
-                    <navigationItem title="Title" id="2207" key="navigationItem"/>
-                    <connections>
-                        <outlet property="NavItem" destination="2207" id="name-outlet-2207"/>
-                        <outlet property="RequestStoryButton" destination="2223" id="name-outlet-2223"/>
-                        <outlet property="StoriesTableView" destination="2557" id="name-outlet-2557"/>
-                    </connections>
-                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1773" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1097" y="-1176"/>
-        </scene>
         <scene sceneID="3076">
             <objects>
                 <tableViewController id="3077" sceneMemberID="viewController" customClass="StoriesListViewController" storyboardIdentifier="StoriesListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" hasRefreshControl="1">
@@ -231,11 +100,23 @@
                         </connections>
                     </tableView>
                     <navigationItem title="Stories" id="3128" key="navigationItem">
-                        <barButtonItem key="rightBarButtonItem" id="19949" image="Account">
-                            <connections>
-                                <action selector="AccountSettingsButton_Activated:" destination="3077" id="19950"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem id="19949" image="Account">
+                                <connections>
+                                    <action selector="AccountSettingsButton_Activated:" destination="3077" id="19950"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem id="22104" image="Bell">
+                                <connections>
+                                    <action selector="Notifications_Activated:" destination="3077" id="24558"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem id="24667" image="Storytellers">
+                                <connections>
+                                    <action selector="Storytellers_Activated:" destination="3077" id="29625"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="3412">
@@ -251,11 +132,13 @@
                     </refreshControl>
                     <connections>
                         <outlet property="AccountSettingsButton" destination="19949" id="name-outlet-19949"/>
+                        <outlet property="Notifications" destination="22104" id="name-outlet-22104"/>
+                        <outlet property="Storytellers" destination="24667" id="name-outlet-24667"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3083" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-236" y="-259"/>
+            <point key="canvasLocation" x="-1208" y="-1235"/>
         </scene>
         <scene sceneID="9188">
             <objects>
@@ -274,12 +157,15 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9192" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-762" y="-265"/>
+            <point key="canvasLocation" x="-1729" y="-1242"/>
         </scene>
     </scenes>
     <resources>
         <image name="Contacts" width="192" height="192"/>
         <image name="Play" width="64" height="64"/>
+        <image name="UserPic" width="36" height="36"/>
+        <image name="Bell" width="25" height="25"/>
+        <image name="Storytellers" width="25" height="25"/>
         <image name="Account" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
