--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
@@ -14,8 +14,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="438"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" id="218" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="0" minimumScaleFactor="0.5">
-                        <rect key="frame" x="16" y="10" width="295" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" id="218" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="0" minimumScaleFactor="0.5" ambiguous="YES">
+                        <rect key="frame" x="64" y="10" width="207" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -23,8 +23,8 @@
                             <constraint id="222" firstItem="218" firstAttribute="height" constant="44"/>
                         </constraints>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="223" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="319" y="22.5" width="40" height="19"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="223" translatesAutoresizingMaskIntoConstraints="NO" ambiguous="YES">
+                        <rect key="frame" x="279" y="22" width="80" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
                         <nil key="highlightedColor"/>
@@ -49,9 +49,20 @@
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7013" hidden="YES">
                         <rect key="frame" x="169" y="233" width="37" height="37"/>
                     </activityIndicatorView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="8076" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" customClass="Picture" image="UserPic">
+                        <rect key="frame" x="10" y="10" width="44" height="44"/>
+                        <constraints>
+                            <constraint id="8913" firstAttribute="width" secondItem="8076" secondAttribute="height" multiplier="1:1"/>
+                            <constraint id="8990" firstItem="8076" firstAttribute="height" constant="44"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                <real key="value" value="22"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint id="220" firstItem="218" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="16"/>
                     <constraint id="221" firstItem="218" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10"/>
                     <constraint id="224" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="223" secondAttribute="trailing" constant="16"/>
                     <constraint id="248" firstItem="223" firstAttribute="leading" secondItem="218" secondAttribute="trailing" constant="8"/>
@@ -64,6 +75,9 @@
                     <constraint id="5512" firstItem="5507" firstAttribute="trailing" secondItem="YTl-1W-gDM" secondAttribute="trailing"/>
                     <constraint id="7014" firstItem="7013" firstAttribute="centerX" secondItem="1686" secondAttribute="centerX"/>
                     <constraint id="7015" firstItem="7013" firstAttribute="centerY" secondItem="1686" secondAttribute="centerY"/>
+                    <constraint id="9067" firstItem="8076" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10"/>
+                    <constraint id="9781" firstItem="8076" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="10"/>
+                    <constraint id="10086" firstItem="218" firstAttribute="leading" secondItem="8076" secondAttribute="trailing" constant="10"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -72,6 +86,7 @@
                 <outlet property="Video" destination="1686" id="name-outlet-1686"/>
                 <outlet property="Preview" destination="5507" id="name-outlet-5507"/>
                 <outlet property="Spinner" destination="7013" id="name-outlet-7013"/>
+                <outlet property="ProfilePicture" destination="8076" id="name-outlet-8076"/>
             </connections>
             <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
         </tableViewCell>
@@ -79,5 +94,7 @@
     <resources>
         <image name="Contacts" width="192" height="192"/>
         <image name="Play" width="64" height="64"/>
+        <image name="Account" width="25" height="25"/>
+        <image name="UserPic" width="36" height="36"/>
     </resources>
 </document>
