--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StorytellersListCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StorytellersListCell.xib
@@ -7,35 +7,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="cxk-wN-pdQ" customClass="ContactsListCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="cxk-wN-pdQ" customClass="StorytellersListCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="142" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="15" y="10" width="52" height="24"/>
+                        <rect key="frame" x="64" y="10" width="52" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="239" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="255" y="17" width="50" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="239" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES">
+                        <rect key="frame" x="310" y="17" width="50" height="30"/>
                         <state key="normal" title="Invite">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            <color key="titleColor" colorSpace="calibratedRGB" red="1" green="0.49803921568627452" blue="0" alpha="1"/>
+                            <color key="titleColor" colorSpace="calibratedRGB" red="0.058823529411764705" green="0.49803921568627452" blue="0.996078431372549" alpha="1"/>
                         </state>
                         <constraints>
-                            <constraint id="243" firstItem="239" firstAttribute="width" constant="50"/>
+                            <constraint id="243" firstItem="239" firstAttribute="width" constant="50" relation="greaterThanOrEqual"/>
                             <constraint id="244" firstItem="239" firstAttribute="height" constant="30"/>
                         </constraints>
                         <connections>
                             <action selector="InviteButton_TouchUpInside:" destination="cxk-wN-pdQ" id="271" eventType="touchUpInside"/>
                         </connections>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="526" translatesAutoresizingMaskIntoConstraints="NO" text="phone number">
-                        <rect key="frame" x="15" y="34" width="100" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="526" translatesAutoresizingMaskIntoConstraints="NO" text="full name">
+                        <rect key="frame" x="64" y="34" width="63" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
                         <nil key="highlightedColor"/>
@@ -43,9 +48,20 @@
                             <constraint id="530" firstItem="526" firstAttribute="height" constant="18"/>
                         </constraints>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="1956" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" image="UserPic" customClass="Picture">
+                        <rect key="frame" x="10" y="10" width="44.5" height="44.5"/>
+                        <constraints>
+                            <constraint id="2601" firstItem="1956" firstAttribute="height" constant="44"/>
+                            <constraint id="2694" firstAttribute="width" secondItem="1956" secondAttribute="height" multiplier="1:1"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                <real key="value" value="22"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint id="238" firstItem="142" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="15"/>
                     <constraint id="240" firstItem="239" firstAttribute="centerY" secondItem="YTl-1W-gDM" secondAttribute="centerY"/>
                     <constraint id="242" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="239" secondAttribute="trailing" constant="15"/>
                     <constraint id="252" firstItem="239" firstAttribute="leading" secondItem="142" secondAttribute="trailing" constant="8" relation="greaterThanOrEqual"/>
@@ -53,16 +69,27 @@
                     <constraint id="527" firstItem="526" firstAttribute="leading" secondItem="142" secondAttribute="leading"/>
                     <constraint id="528" firstItem="526" firstAttribute="top" secondItem="142" secondAttribute="bottom"/>
                     <constraint id="529" firstItem="239" firstAttribute="leading" secondItem="526" secondAttribute="trailing" constant="8" relation="greaterThanOrEqual"/>
+                    <constraint id="2787" firstItem="1956" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10"/>
+                    <constraint id="2880" firstItem="1956" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="10"/>
+                    <constraint id="2973" firstItem="YTl-1W-gDM" firstAttribute="bottom" secondItem="1956" secondAttribute="bottom" constant="9" relation="greaterThanOrEqual"/>
+                    <constraint id="4557" firstItem="142" firstAttribute="leading" secondItem="1956" secondAttribute="trailing" constant="10"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="Name" destination="142" id="name-outlet-142"/>
+                <outlet property="Username" destination="142" id="name-outlet-142"/>
                 <outlet property="InviteButton" destination="239" id="name-outlet-239"/>
-                <outlet property="PhoneNumber" destination="526" id="name-outlet-526"/>
+                <outlet property="FullName" destination="526" id="name-outlet-526"/>
+                <outlet property="ProfilePicture" destination="1956" id="name-outlet-1956"/>
             </connections>
+            <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Contacts" width="192" height="192"/>
+        <image name="Play" width="64" height="64"/>
+        <image name="Account" width="25" height="25"/>
+        <image name="UserPic" width="36" height="36"/>
+        <image name="Bell" width="25" height="25"/>
+        <image name="Storytellers" width="25" height="25"/>
     </resources>
 </document>
