--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -159,6 +159,68 @@
             </objects>
             <point key="canvasLocation" x="-1729" y="-1242"/>
         </scene>
+        <scene sceneID="30611">
+            <objects>
+                <viewController id="30612" sceneMemberID="viewController" customClass="NotificationCenterController" storyboardIdentifier="NotificationCenterController" useStoryboardIdentifierAsRestorationIdentifier="YES">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="30609"/>
+                        <viewControllerLayoutGuide type="bottom" id="30610"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="30613">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="30943" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Notifications" id="30944">
+                                        <barButtonItem key="leftBarButtonItem" id="31102" systemItem="stop">
+                                            <connections>
+                                                <action selector="CloseButton_Activated:" destination="30612" id="31156"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                                <constraints>
+                                    <constraint id="31018" firstItem="30943" firstAttribute="height" constant="44"/>
+                                </constraints>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" id="31336" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="0.0" y="65" width="375" height="602"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="31337" rowHeight="45">
+                                        <rect key="frame" x="0.0" y="1" width="375" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="31337" id="31338">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <constraints>
+                            <constraint id="30965" firstItem="30943" firstAttribute="top" secondItem="30609" secondAttribute="bottom"/>
+                            <constraint id="30976" firstItem="30943" firstAttribute="centerX" secondItem="30613" secondAttribute="centerX"/>
+                            <constraint id="30987" firstItem="30943" firstAttribute="width" secondItem="30613" secondAttribute="width"/>
+                            <constraint id="31409" firstItem="31336" firstAttribute="top" secondItem="30943" secondAttribute="bottom" constant="1"/>
+                            <constraint id="31420" firstItem="31336" firstAttribute="bottom" secondItem="30613" secondAttribute="bottom"/>
+                            <constraint id="31431" firstItem="31336" firstAttribute="centerX" secondItem="30613" secondAttribute="centerX"/>
+                            <constraint id="31442" firstItem="31336" firstAttribute="width" secondItem="30613" secondAttribute="width"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="NavBar" destination="30943" id="name-outlet-30943"/>
+                        <outlet property="CloseButton" destination="31102" id="name-outlet-31102"/>
+                        <outlet property="TableView" destination="31336" id="name-outlet-31336"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="30614" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-145" y="-1230"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Contacts" width="192" height="192"/>
